# FastDTLmapper

./: .coveragerc  .gitattributes  CITATION.cff  Dockerfile  FastDTLgoea.py  FastDTLmapper.py  README.md  fastDTLmapper.py  pyproject.toml  testrun.py
.github/workflows/: CI.yml  ci.yml  deploy_to_pypi.yml  push_docker_image.yml
example/minimum_dataset/fasta/: insp1.fa  insp2.fa  insp3.fa  insp4.fa  insp5.fa  outsp1.fa  outsp2.fa
example/minimum_dataset/output_result/03_aggregate_map_result/: all_dtl_map.nwk  all_gain_loss_map.nwk  all_og_node_event.tsv  all_transfer_gene_count.tsv  all_transfer_gene_list.tsv
example/mycoplasma_dataset/fasta/: MGallisepticum.fa  MGenitalium.fa  MImitans.fa  MPirum.fa  MPneumoniae.fa  MTestudinis.fa
example/mycoplasma_dataset/output_result/03_aggregate_map_result/: all_dtl_map.nwk  all_gain_loss_map.nwk  all_og_node_event.tsv  all_transfer_gene_count.tsv  all_transfer_gene_list.tsv
fastdtlmapper/: config.py  input_check.py  reconcilation.py
fastdtlmapper/angst/: __init__.py
fastdtlmapper/angst/model/: __init__.py  transfer.py
fastdtlmapper/goea/: __init__.py
fastdtlmapper/util/: __init__.py  tree.py
lib/: config.py  input_check.py  reconcilation.py
lib/angst/: event_map.py  transfer_gene.py
lib/goea/: __init__.py  goea.py  og_go_association.py
lib/mowgli/: __init__.py  event_map.py  model.py  tree.py  xml_parser.py
lib/util/: seq.py  tree.py
src/fastdtlmapper/: args.py  cmd.py  input_check.py  out_path.py  reconcilation.py  setup_binpath.py
src/fastdtlmapper/angst/: __init__.py  event_map.py  transfer_gene.py
src/fastdtlmapper/angst/model/: node_event.py
src/fastdtlmapper/goea/: args.py  goea.py  og_go_association.py
src/fastdtlmapper/scripts/: FastDTLgoea.py  FastDTLmapper.py  plot_gain_loss_map.py
src/fastdtlmapper/util/: __init__.py  fasta.py  genbank.py  time.py  tree.py
tests/: conftest.py  test_args.py  test_cmd.py  test_input_check.py  test_out_path.py  test_reconciliation.py  test_setup_binpath.py
tests/angst/: test_event_map.py  test_transfer_gene.py
tests/angst/model/: test_node_event.py  test_transfer.py
tests/data/: all_dtl_map.nwk  all_gain_loss_map.nwk  test.fa
tests/data/angst/: AnGST.events  AnGST.leaf
tests/data/fasta_or_genbank/: insp1.faa  insp2.faa  insp4.faa  outsp1.faa
tests/data/goea/: Orthogroups.txt  goea_all_gene_list.txt  goea_association.txt  goea_result.tsv  goea_target_gene_list.txt
tests/data/tree/: species_tree.nwk  species_tree_nodeid.nwk  unrooted_species_tree.nwk
tests/goea/: test_args.py  test_goea.py  test_og_go_association.py
tests/scripts/: test_FastDTLgoea.py  test_FastDTLmapper.py  test_plot_gain_loss_map.py
tests/util/: test_fasta.py  test_genbank.py  test_tree.py
(+14 files in other folders)
