[tool.poetry]
name = "FastDTLmapper"
version = "0.1.0"
description = "Fast genome-wide DTL(Duplication-Transfer-Loss) event mapping tool"
authors = ["moshi"]

[tool.poetry.scripts]
FastDTLmapper = "fastdtlmapper.scripts.FastDTLmapper:main"
FastDTLgoea = "fastdtlmapper.scripts.FastDTLgoea:main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
biopython = "^1.79"
scipy = "^1.7.1"
goatools = "^1.1.6"
pandas = "^1.3.3"
numpy = "^1.21.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
ipykernel = "^6.4.1"
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
