[tool.poetry]
name = "FastDTLmapper"
version = "0.3.4"
description = "Fast genome-wide DTL(Duplication-Transfer-Loss) event mapping tool"
authors = ["moshi"]
license = "GPL-3.0-only"
homepage = "https://github.com/moshi4/FastDTLmapper/"
repository = "https://github.com/moshi4/FastDTLmapper/"
readme = "README.md"
keywords = [
    "fastdtlmapper",
    "bioinformatics",
    "genomics",
    "phylogenetics",
    "phylogenomics",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=line --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
FastDTLmapper = "fastdtlmapper.scripts.FastDTLmapper:main"
FastDTLgoea = "fastdtlmapper.scripts.FastDTLgoea:main"
plot_gain_loss_map = "fastdtlmapper.scripts.plot_gain_loss_map:main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
biopython = "^1.79"
scipy = "^1.7.1"
goatools = "^1.1.6"
pandas = "^1.3.3"
numpy = "^1.21.2"
ete3 = "^3.1.2"
PyQt5 = "^5.15.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
ipykernel = "^6.4.1"
ipython = "^7.27.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
